# simple-auth-service

./: .dockerignore  .gitignore  README.md  config.toml  docker-compose.yml  pyproject.toml
auth_service/: __main__.py  fastapi_app.py
auth_service/api/: auth.py
auth_service/core/: __init__.py  auth.py  config.py  security.py
auth_service/crud/: __init__.py  user.py
auth_service/db/: database.py
auth_service/db/model/: create_tables.py  user.py
auth_service/schemas/: token.py  user.py
auth_service/static/: callback.html  example.html  login.html  register.html
dockers/: Dockerfile
